Ajuste no confirmar conta

--- a/src/app/features/auth/confirm-account/confirm-account.component.html
+++ b/src/app/features/auth/confirm-account/confirm-account.component.html
@@ -23,7 +23,7 @@
       <button
         class="btn-primary"
         (click)="confirm()"
-        [disabled]="loading || user"
+        [disabled]="loading"
       >
         <span class="spinner" *ngIf="loading"></span>
         {{ loading ? 'Confirmando...' : 'Confirmar conta' }}
